# TransRapport_all-sys

./: .gitignore  ACCEPTANCE_TRANSCRIPT.md  CHANGELOG.md  CLAUDE.md  INTEGRATION_SUMMARY.md  README.md  RELEASE_ARTIFACTS.md  RELEASE_NOTES.md  demo-desktop-workflow.sh  demo.py  install.sh  me.py  pyproject.toml  pytest.ini  report_template.html  requirements-dev.txt  requirements-offline.txt  requirements-prod.txt  requirements.txt  setup.py  sitecustomize.py  test_chat.txt  transR-bugs-improve.md  uninstall.sh
.github/workflows/: build.yml  ci.yml
.venv-offline/: pyvenv.cfg
Engine/: DETECT_registry.json  META_omissions.yaml  analyze_chat.py  balancing_actions.yaml  build_core_bundles.py  marker_engine_core.py  master_sch_core.json  package.json  schema_full_bundle.json  sets_config.json  update_ld33_compliance.py
certs/: README.md
certs/linux/: signing-config.json
certs/macos/: signing-config.json
certs/windows/: signing-config.json
data/: transrapport.db  weights.json
demo-docs/: bad-terminologie.md  completely-broken.md
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.svelte
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: analysis_commands.rs  audio_commands.rs  export_commands.rs  main.rs  python_integration.rs  storage_commands.rs  transcription_commands.rs
desktop/src/components/: AnalysisView.svelte  ConversationList.svelte  MainWindow.svelte  RealtimeMonitor.svelte  Sidebar.svelte  StatusBar.svelte  TransRapportWorkflow.svelte
desktop/src/lib/: cli-service.ts
docs/: ACCEPTANCE_TRANSCRIPT.md  OPERATIONS.md  QUICKSTART.md  SCHEMA.md  SECURITY.md
docs/legacy/: README_DOC_VALIDATOR.md
exports/demo/: edff3e4f-52ac-4f46-83bf-c3b133a6f69e_markers_all.csv  edff3e4f-52ac-4f46-83bf-c3b133a6f69e_markers_all.json
hybrid-architecture/: README.md
hybrid-architecture/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  ITERATION_1_TASKS.md
hybrid-architecture/src/frontend/: package-lock.json  package.json  svelte.config.js
hybrid-architecture/src/frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
hybrid-architecture/src/frontend/.svelte-kit/types/: route_meta_data.json
hybrid-architecture/src/frontend/.svelte-kit/types/src/routes/: $types.d.ts
hybrid-architecture/src/frontend/.svelte-kit/types/src/routes/perform/: $types.d.ts
hybrid-architecture/src/frontend/src/routes/: +page.svelte
hybrid-architecture/src/frontend/src/routes/capture/: +page.svelte
hybrid-architecture/src/frontend/src/routes/explore/: +page.svelte
hybrid-architecture/src/frontend/src/routes/perform/: +page.svelte
samples/: demo.txt  test.txt
scripts/: build-linux-bundles.sh
sessions/demo-ui-1757438477/: demo.txt  diarization.json  diarization_result.json  transcript.json  transcript_result.json
sessions/test-wiring-1757438616189/: diarization.json  recording_session.txt  transcript.json
sessions/test-wiring-1757439811454/: diarization.json  recording_session.txt  transcript.json
specs/001-transrapport-md-and/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-transrapport-md-and/contracts/: cli-interface.yaml
specs/002-frontend-architecture-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-architecture-to/contracts/: api.yaml  websocket.md
specs/003-transrapport-offline-desktop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-transrapport-offline-desktop/contracts/: analysis-library.yaml  audio-library.yaml  export-library.yaml  transcription-library.yaml
specs/004-app-must-be/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-app-must-be/contracts/: build-api.json
src/cli/: main.py
src/cli/commands/: audio.py  diarize.py  export.py  jobs.py  run.py  transcribe.py
src/cli/core/: config.py  database.py
src/config/: v0_1_0_defaults.py
src/doc_validator/cli/: __init__.py  crossref_command.py  main.py  status_command.py  utils.py  validate_command.py
src/doc_validator/models/: architectural_component.py  validation_result.py
src/doc_validator/services/: __init__.py  crossref_validator.py  doc_parser.py
src/lib/analysis/: ato_engine.py  clu_engine.py  pipeline.py  rapport_calculator.py  sem_engine.py
src/lib/audio/: capture.py  import_.py  pipeline.py  prosody.py
src/lib/export/: marker_export.py  report_generator.py  transcript_export.py
src/lib/packaging/: __init__.py
src/lib/packaging/services/: __init__.py  build_service.py  package_service.py  sign_service.py  validate_service.py
src/lib/storage/: __init__.py  database.py  marker_store.py
src/lib/transcription/: whisper_service.py
src/models/: marker_event.py
terminologie/: ARCHITECTURE.md  MARKER.md  TRANSRAPPORT.md
test-docs/: architecture.md  broken-links.md  marker.md  terminologie.md
test_output/: report.html  results.json
tests/: __init__.py  conftest.py  test_goldens.py
tests/contract/: test_audio_capture.py  test_build_api.py  test_docs_crossref.py  test_docs_status.py  test_docs_validate.py  test_marker_ato.py  test_package_api.py  test_rapport_calculation.py  test_sign_api.py  test_speaker_diarization.py  test_validate_api.py  test_whisper_asr.py
tests/goldens/: cli_output_expected.json
tests/integration/: test_cross_platform_uninstall.py  test_crossref_management.py  test_crossref_validation.py  test_developer_workflow.py  test_doc_parsing.py  test_inconsistency_detection.py  test_linux_install.py  test_macos_install.py  test_terminology_parsing.py  test_windows_install.py
tests/user_stories/: test_macos_linux_user_story.py  test_windows_user_story.py
