[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transrapport-all-sys"
version = "0.1.0"
description = "TransRapport Complete System with Audio Processing, Diarization and Prosody Analysis"
authors = [{name = "TransRapport Team"}]
license = {text = "CC BY-NC-SA 4.0"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    # Core dependencies
    "click>=8.0.0",
    "pyyaml>=6.0",
    "regex>=2023.0.0",
    "sqlcipher3-binary",

    # Data processing
    "pandas",
    "numpy",
    "matplotlib",

    # Audio processing core
    "librosa",
    "soundfile",
    "pydub",

    # Platform-specific audio
    "pyaudio; platform_system=='Windows'",
    "sounddevice; platform_system!='Windows'",

    # ML/AI core
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "scipy>=1.10.0",

    # ASR and Diarization
    "openai-whisper",
    "whisperx",
    "pyannote.audio",
    "pyannote.core>=5.0.0",
    "pyannote.pipeline>=3.0.0",

    # Prosody and Emotion Analysis
    "praat-parselmouth",
    "opensmile",
    "pyAudioAnalysis",
    "webrtcvad",

    # NLP and Transformers
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",

    # Additional ML
    "scikit-learn>=1.3.0",

    # UI and Reporting
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
],
gpu = [
    "torch[cu118]>=2.0.0; platform_system=='Linux'",
    "torchaudio[cu118]>=2.0.0; platform_system=='Linux'",
],
full = [
    # All optional dependencies for complete offline functionality
    "torch[cu118]>=2.0.0; platform_system=='Linux'",
    "torchaudio[cu118]>=2.0.0; platform_system=='Linux'",
    "pyannote.audio[all]",  # Includes all pyannote dependencies
    "spacy[all]",  # Includes all spacy models
    "transformers[all]",  # Includes all transformer dependencies
],
minimal = [
    # Minimal dependencies for basic functionality
    "click>=8.0.0",
    "pyyaml>=6.0",
    "regex>=2023.0.0",
    "sqlcipher3-binary",
    "librosa",
    "soundfile",
    "torch>=2.0.0",
    "openai-whisper",
]

[project.scripts]
transrapport = "cli.main:main"
transrapport-docs = "doc_validator.cli.main:main"
transrapport-audio = "lib.audio.cli:main"

[project.urls]
"Homepage" = "https://github.com/transrapport/transrapport"
"Bug Reports" = "https://github.com/transrapport/transrapport/issues"
"Source" = "https://github.com/transrapport/transrapport"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "COM812", "ISC001"]
line-length = 88
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]