[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transrapport-all-sys"
version = "0.1.0"
description = "Offline-first prosody/marker engine + UI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DYAI" }]
license = { text = "Proprietary" }
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "soundfile>=0.12",
  "pydantic>=2",
  "click>=8.0.0",
  "pyyaml>=6.0",
  "sqlcipher3-binary",
  "librosa",
  "torch>=2.0.0",
  "openai-whisper",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
]

[project.scripts]
transrapport = "cli.main:main"
transrapport-docs = "doc_validator.cli.main:main"
transrapport-audio = "lib.audio.cli:main"

[project.urls]
"Homepage" = "https://github.com/transrapport/transrapport"
"Bug Reports" = "https://github.com/transrapport/transrapport/issues"
"Source" = "https://github.com/transrapport/transrapport"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "COM812", "ISC001"]
line-length = 88
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "windows: marks tests that only run on Windows",
    "linux: marks tests that only run on Linux",
    "macos: marks tests that only run on macOS",
]